[package]
name = "rust-trash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
nalgebra-glm = "*"
hyper= { version = "*", features = ["full"] }
tokio = { version = "1", features = ["full"] }